@@ -1,3 +1,7 @@
+2008-09-04 Jens Tkotz <jens@peino.de> 1.5.9-svn-b21
+
+ * Fix: Added missing function in lib/album.php
+
 2008-09-03 Jens Tkotz <jens@peino.de> 1.5.9-svn-b20
 
  * FIX: Move and reorder for main albums were gone ?!?
